@@ -3,3 +3,5 @@ Add DrawLine to Camera and Window
 Add JCash header file in deps and CMakeLists.txt (Voronoi)
 Add Voronoi.h and Voronoi.cpp
 Change exception string to from "V-2DEngine" to "V-2DFramework"
+And Lib::Mid for ConvexShape
+Restructured Lib with Decl and Def
